tested basic foraginMDP, it works properly but its not learning anything useful since states change

--- a/Example2_MDP.ipynb
+++ b/Example2_MDP.ipynb
@@ -129,34 +129,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['State: 0', '[t] 0', '1', 'State: 1', '[0] 1 {0}']\n",
-      "0 set() [t] 0\n",
-      "[None]\n",
-      "set()\n",
-      "---  () -  True -  set()  -  set()\n",
-      "here 0 [None]\n",
-      "---  ('a',) -  True -  set()  -  set()\n",
-      "here 0 [None]\n",
-      "1 {0} [0] 1 {0}\n",
-      "[True]\n",
-      "{'a'}\n",
-      "---  () -  False -  set()  -  set()\n",
-      "---  ('a',) -  True -  set()  -  set()\n",
-      "here 1 [True]\n",
-      "['State: 0', '[t] 0', '1', 'State: 1', '[0] 1 {0}']\n",
-      "0 set() [t] 0\n",
-      "[None]\n",
-      "set()\n",
-      "---  () -  True -  set()  -  set()\n",
-      "here 0 [None]\n",
-      "---  ('b',) -  True -  set()  -  set()\n",
-      "here 0 [None]\n",
-      "1 {0} [0] 1 {0}\n",
-      "[True]\n",
-      "{'b'}\n",
-      "---  () -  False -  set()  -  set()\n",
-      "---  ('b',) -  True -  set()  -  set()\n",
-      "here 1 [True]\n",
       "Number of Omega-automaton states (including the trap state): 3\n",
       "Number of Omega-automaton states (including the trap state): 3\n"
      ]
@@ -179,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +217,7 @@
        "</div>"
       ],
       "text/plain": [
-       "<csrl.oa.OmegaAutomaton at 0x7f7e5fa64320>"
+       "<csrl.oa.OmegaAutomaton at 0x7f539456f2e8>"
       ]
      },
      "metadata": {},
