--- a/Nursery Scenario.ipynb
+++ b/Nursery Scenario.ipynb
@@ -359,9 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -537,7 +535,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -551,7 +549,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
