--- a/shared_oa_ex2.ipynb
+++ b/shared_oa_ex2.ipynb
@@ -75,6 +75,10 @@
    "execution_count": 2,
    "id": "modular-kidney",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -326,6 +330,10 @@
    "execution_count": 31,
    "id": "2cafc89f-d1fb-40d2-852d-4acf39d353f5",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -702,6 +710,10 @@
    "execution_count": 87,
    "id": "5b5f5778-1afb-4723-875e-58c7bef18eb2",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -4773,7 +4785,13 @@
    "cell_type": "code",
    "execution_count": 89,
    "id": "ed948fc8-8bfd-4fda-84c0-126d80475934",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -4827,6 +4845,10 @@
    "execution_count": 88,
    "id": "b3dc3d98",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -5045,7 +5067,13 @@
    "cell_type": "code",
    "execution_count": 84,
    "id": "2b8ad5b6-7ce7-486f-83a0-ec5ee0a6f7ef",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
