video is printing but issue with displaying landmarks, targets + states were not changing working on those bugs

--- a/shared_oa_ex3.ipynb
+++ b/shared_oa_ex3.ipynb
@@ -1577,10 +1577,39 @@
     "# Naming the x-axis, y-axis and the whole graph\n",
     "plt.xlabel(\"Episodes\")\n",
     "plt.ylabel(\"Acc Return\")\n",
-    "plt.title(\"return per episode\")\n",
-    "\n",
-    "np.savetxt('shared_oa_ex3_returns.csv', ep_returns, delimiter=',')"
+    "plt.title(\"return per episode\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15739277-ceb9-4fea-b0a7-87cf790d76fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.savetxt('shared_oa_ex3_returns.csv', ep_returns, delimiter=',')\n",
+    "trace.save('shared_oa_ex3_returns_df.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "f04214f8-bdb3-475e-b2cd-3de51fae808e",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'trace' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-14-37ccb20ee0e1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtrace\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'trace' is not defined"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1886,8 +1915,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "937b1793-c0e2-414a-9444-7d1272d9fc43",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### testing logger"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 1,
    "id": "f21765f0-2f33-42bc-baaa-a9e7e9ac0aff",
    "metadata": {},
    "outputs": [
@@ -1895,11 +1934,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "potato\n",
       "Empty DataFrame\n",
-      "Columns: [iteration, episode, labels, state_0, state_1, reward_0, reward_1, action_0, action_1]\n",
-      "Index: []\n",
-      "row {'iteration': 0, 'episode': 0, 'labels': ['a', 'b', 'c'], 'state_0': [-2, 0], 'state_1': [3, 4], 'reward_0': 3, 'reward_1': 5, 'action_0': 0, 'action_1': 2}\n"
+      "Columns: [iteration, episode, step, labels, labels_seen, state_0, state_1, reward_0, reward_1, action_0, action_1, available_actions_0, available_actions_1]\n",
+      "Index: []\n"
      ]
     }
    ],
@@ -1908,13 +1945,14 @@
     "\n",
     "new_t = Trace(2, 5, 3)\n",
     "print(new_t.df)\n",
-    "new_t.add_episode(0, 0, [3,5], [[-2,0], [3,4]], [0,2], ['a', 'b', 'c'])\n",
-    "# new_t.add_episode(0, 0, [3,5], [-2,0], [0,2], ['a', 'b', 'c'])"
+    "# step, episode, it, rewards, state, actions, labels, labels_seen, available_actions\n",
+    "new_t.add_episode(0, 0, 0, [3,5], [[-2,0], [3,4]], [0,2], ['a'],  ['a', 'c'], [0,4,6])\n",
+    "new_t.add_episode(0, 0, 1, [4,6],[[-1,1], [2,5]], [1,3], ['a', 'b'],  ['a', 'b', 'c'], [1,5,7])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 2,
    "id": "785e21ef-4025-458d-8d26-11d7da1d8dc3",
    "metadata": {},
    "outputs": [
@@ -1941,13 +1979,17 @@
        "      <th></th>\n",
        "      <th>iteration</th>\n",
        "      <th>episode</th>\n",
+       "      <th>step</th>\n",
        "      <th>labels</th>\n",
+       "      <th>labels_seen</th>\n",
        "      <th>state_0</th>\n",
        "      <th>state_1</th>\n",
        "      <th>reward_0</th>\n",
        "      <th>reward_1</th>\n",
        "      <th>action_0</th>\n",
        "      <th>action_1</th>\n",
+       "      <th>available_actions_0</th>\n",
+       "      <th>available_actions_1</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1955,27 +1997,49 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>[a, b, c]</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[a]</td>\n",
+       "      <td>[a, c]</td>\n",
        "      <td>[-2, 0]</td>\n",
        "      <td>[3, 4]</td>\n",
        "      <td>3</td>\n",
        "      <td>5</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[a, b]</td>\n",
+       "      <td>[a, b, c]</td>\n",
+       "      <td>[-1, 1]</td>\n",
+       "      <td>[2, 5]</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  iteration episode     labels  state_0 state_1 reward_0 reward_1 action_0  \\\n",
-       "0         0       0  [a, b, c]  [-2, 0]  [3, 4]        3        5        0   \n",
+       "  iteration episode step  labels labels_seen  state_0 state_1 reward_0  \\\n",
+       "0         0       0    0     [a]      [a, c]  [-2, 0]  [3, 4]        3   \n",
+       "1         1       0    0  [a, b]   [a, b, c]  [-1, 1]  [2, 5]        4   \n",
        "\n",
-       "  action_1  \n",
-       "0        2  "
+       "  reward_1 action_0 action_1 available_actions_0 available_actions_1  \n",
+       "0        5        0        2                   0                   4  \n",
+       "1        6        1        3                   1                   5  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1986,7 +2050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 7,
    "id": "df155a34-f9e5-48d5-987f-d2b009d0f009",
    "metadata": {},
    "outputs": [
@@ -2013,13 +2077,17 @@
        "      <th></th>\n",
        "      <th>iteration</th>\n",
        "      <th>episode</th>\n",
+       "      <th>step</th>\n",
        "      <th>labels</th>\n",
+       "      <th>labels_seen</th>\n",
        "      <th>state_0</th>\n",
        "      <th>state_1</th>\n",
        "      <th>reward_0</th>\n",
        "      <th>reward_1</th>\n",
        "      <th>action_0</th>\n",
        "      <th>action_1</th>\n",
+       "      <th>available_actions_0</th>\n",
+       "      <th>available_actions_1</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -2027,39 +2095,298 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>[a, b, c]</td>\n",
+       "      <td>[a, b, c, d]</td>\n",
        "      <td>[-2, 0]</td>\n",
        "      <td>[3, 4]</td>\n",
        "      <td>3</td>\n",
        "      <td>5</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  iteration episode     labels  state_0 state_1 reward_0 reward_1 action_0  \\\n",
-       "0         0       0  [a, b, c]  [-2, 0]  [3, 4]        3        5        0   \n",
+       "  iteration episode step     labels   labels_seen  state_0 state_1 reward_0  \\\n",
+       "0         0       0    0  [a, b, c]  [a, b, c, d]  [-2, 0]  [3, 4]        3   \n",
        "\n",
-       "  action_1  \n",
-       "0        2  "
+       "  reward_1 action_0 action_1 available_actions_0 available_actions_1  \n",
+       "0        5        0        2                   0                   4  "
       ]
      },
-     "execution_count": 85,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "new_t.get_iteration(0)"
+    "new_t.get_episode(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d340c461-8f69-476d-b480-b1505b772843",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_t.save('test_potato.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "84869f0c-15bd-4c06-88e5-b2a442d1542c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>iteration</th>\n",
+       "      <th>episode</th>\n",
+       "      <th>step</th>\n",
+       "      <th>labels</th>\n",
+       "      <th>labels_seen</th>\n",
+       "      <th>state_0</th>\n",
+       "      <th>state_1</th>\n",
+       "      <th>reward_0</th>\n",
+       "      <th>reward_1</th>\n",
+       "      <th>action_0</th>\n",
+       "      <th>action_1</th>\n",
+       "      <th>available_actions_0</th>\n",
+       "      <th>available_actions_1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[a, b, c]</td>\n",
+       "      <td>[a, b, c, d]</td>\n",
+       "      <td>[-2, 0]</td>\n",
+       "      <td>[3, 4]</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  iteration episode step     labels   labels_seen  state_0 state_1 reward_0  \\\n",
+       "0         0       0    0  [a, b, c]  [a, b, c, d]  [-2, 0]  [3, 4]        3   \n",
+       "\n",
+       "  reward_1 action_0 action_1 available_actions_0 available_actions_1  \n",
+       "0        5        0        2                   0                   4  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_t.df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b8b7f964-18ba-4674-adcf-42b189a916c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t2 = Trace(2, 5, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "9c0e3392-99ac-497b-971f-dde1b3b5b243",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>iteration</th>\n",
+       "      <th>episode</th>\n",
+       "      <th>step</th>\n",
+       "      <th>labels</th>\n",
+       "      <th>labels_seen</th>\n",
+       "      <th>state_0</th>\n",
+       "      <th>state_1</th>\n",
+       "      <th>reward_0</th>\n",
+       "      <th>reward_1</th>\n",
+       "      <th>action_0</th>\n",
+       "      <th>action_1</th>\n",
+       "      <th>available_actions_0</th>\n",
+       "      <th>available_actions_1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [iteration, episode, step, labels, labels_seen, state_0, state_1, reward_0, reward_1, action_0, action_1, available_actions_0, available_actions_1]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t2.df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "ff002555-cdc1-47ca-9378-4d4a3e6d9f38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t2.load('test_potato.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d96ad46b-9482-46fd-857b-bd0544e32e79",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>iteration</th>\n",
+       "      <th>episode</th>\n",
+       "      <th>step</th>\n",
+       "      <th>labels</th>\n",
+       "      <th>labels_seen</th>\n",
+       "      <th>state_0</th>\n",
+       "      <th>state_1</th>\n",
+       "      <th>reward_0</th>\n",
+       "      <th>reward_1</th>\n",
+       "      <th>action_0</th>\n",
+       "      <th>action_1</th>\n",
+       "      <th>available_actions_0</th>\n",
+       "      <th>available_actions_1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>['a', 'b', 'c']</td>\n",
+       "      <td>['a', 'b', 'c', 'd']</td>\n",
+       "      <td>[-2, 0]</td>\n",
+       "      <td>[3, 4]</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   iteration  episode  step           labels           labels_seen  state_0  \\\n",
+       "0          0        0     0  ['a', 'b', 'c']  ['a', 'b', 'c', 'd']  [-2, 0]   \n",
+       "\n",
+       "  state_1  reward_0  reward_1  action_0  action_1  available_actions_0  \\\n",
+       "0  [3, 4]         3         5         0         2                    0   \n",
+       "\n",
+       "   available_actions_1  \n",
+       "0                    4  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t2.df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d340c461-8f69-476d-b480-b1505b772843",
+   "id": "98865f5a-d730-4bfe-ae5c-c4c48000caca",
    "metadata": {},
    "outputs": [],
    "source": []
