edited rewards for non shaping + graphing, still need to create ep_retrurns for independent

--- a/shared_oa_benchmark2.ipynb
+++ b/shared_oa_benchmark2.ipynb
@@ -1010,10 +1010,117 @@
   },
   {
    "cell_type": "markdown",
+   "id": "38ca7294-4755-4838-8fe9-6ed13af2bd0e",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# Baseline code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6381705b-c64d-4044-a7f3-9759826fcfcf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.signal import savgol_filter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0c2889b-3eaa-43f3-9f80-12d4b1d1340f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 4, 8, 4, 8, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "qval_base, ep_returns_base, base_trace = mcsrl.combined_qlearning_noshaping(T=200, K=70000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0219ac6-e107-49d1-ab9e-77ff44dc8765",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "policies_b = [np.argmax(qval_base[0],axis=2), np.argmax(qval_base[1],axis=2)]\n",
+    "values_b = [np.max(qval_base[0],axis=2), np.max(qval_base[1],axis=2)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "280722f4-4c50-48cd-8d07-282d594c6d28",
+   "metadata": {},
+   "source": [
+    "## smooth output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90b0a208-4a8b-4b63-8a8f-ade6edc3a683",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(14, 10))\n",
+    "plt.plot( ep_returns_base[:,0], color='c', label='agent 0', alpha=0.2)\n",
+    "yhat = savgol_filter(ep_returns_base[:,0], 101, 3) # window size 101, polynomial order 3\n",
+    "yhat2 = savgol_filter(ep_returns_base[:,1], 101, 3)\n",
+    "plt.plot(yhat, color='b', label='smooth')\n",
+    "plt.plot(yhat2, color='r', label='smooth')\n",
+    "# plt.plot(yhat2, color='g', label='smooth2')\n",
+    "# plt.plot(np.arange(0, ep_returns.shape[0]), ep_returns[:,1], color='g',  label='agent 1')\n",
+    "\n",
+    "# Naming the x-axis, y-axis and the whole graph\n",
+    "plt.xlabel(\"Episodes\")\n",
+    "plt.ylabel(\"Acc Return\")\n",
+    "plt.title(\"return per episode baseline\")\n",
+    "\n",
+    "# np.savetxt('shared_oa_ex3_returns_base.csv', ep_returns_base, delimiter=',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21eb0bd0-46a2-4fcb-be9a-c29cc5141a60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_trace.save('shared_oa_bench2_returns_df_base.csv')\n",
+    "np.savetxt('shared_oa_bench2_returns_base.csv', ep_returns_base, delimiter=',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d60adf4-8296-4855-9b20-338f9d7c96a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "policies_b[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b8cd636b-e850-4bee-9d2c-6d5abe3d306e",
    "metadata": {},
    "source": [
-    "### not shared state -> shared oa -> works but high number of episodes required. -> episodes > 30k "
+    "### shared oa QL + plotting"
    ]
   },
   {
@@ -1023,7 +1130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "qval, ep_returns = mcsrl.combined_qlearning(T=350, K=200000)"
+    "qval, ep_returns, trace = mcsrl.combined_qlearning(T=350, K=200000)"
    ]
   },
   {
@@ -1603,9 +1710,29 @@
     "# Naming the x-axis, y-axis and the whole graph\n",
     "plt.xlabel(\"Episodes\")\n",
     "plt.ylabel(\"Acc Return\")\n",
-    "plt.title(\"return per episode\")\n",
-    "\n",
+    "plt.title(\"return per episode\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "115b8da0-e66c-4eaa-a8e4-0c00ac06f236",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trace.save('shared_oa_bench2_returns_df.csv')\n",
     "np.savetxt('shared_oa_bench2_returns.csv', ep_returns, delimiter=',')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e030827-4475-4b7a-a009-475b9d384fcf",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "## Debug"
    ]
   },
   {
@@ -1909,17 +2036,6 @@
    ],
    "source": [
     "csrl2.reward"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0e030827-4475-4b7a-a009-475b9d384fcf",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
-    "tags": []
-   },
-   "source": [
-    "## Debug"
    ]
   },
   {
